<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/dp_16"
	tools:context=".firebase.indexing.PersonalIndexingActivity">

	<TextView
		android:id="@+id/link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:text="@string/none" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btn_add"
			style="@style/ButtonCustom"
			android:text="@string/btn_add" />

		<Button
			android:id="@+id/btn_remove"
			style="@style/ButtonCustom"
			android:text="@string/btn_remove" />

		<Button
			android:id="@+id/btn_clear"
			style="@style/ButtonCustom"
			android:text="@string/btn_clear" />

	</LinearLayout>

</RelativeLayout>